Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/SMAX_PS_Service_Issue__c.object-meta.xml
<CustomObject>
    <label>Service Issue</label>
    <nameField>
        <displayFormat>SI-{00000000}</displayFormat>
        <label>Service Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>