Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>NOW()-CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many Days ago was this created?  Not stopped when resolved</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>