Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Actor__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Actor__c</fullName>
    <label>Actor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRC - Customer Care</fullName>
            </value>
            <value>
                <fullName>TS - Tech Support</fullName>
            </value>
            <value>
                <fullName>FSE - Field Service Engineer</fullName>
            </value>
            <value>
                <fullName>FSM - Field Service Manager</fullName>
            </value>
            <value>
                <fullName>ENT - Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>