Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Detail__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Detail__c</fullName>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>