Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_JIRA_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_JIRA_ID__c</fullName>
    <label>JIRA ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>