Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Ready_for_Retest__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Ready_for_Retest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Retest</label>
    <type>Checkbox</type>
</CustomField>