Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Record__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Record__c</fullName>
    <inlineHelpText>Copy and paste the URL from the record you were on when you encountered the issue.</inlineHelpText>
    <label>Record</label>
    <type>Url</type>
</CustomField>