Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Resolved__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>