Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Script_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Script_Number__c</fullName>
    <description>UAT script number</description>
    <inlineHelpText>UAT script number - e.g. ITV-17-006-002-0007</inlineHelpText>
    <label>Script Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>