Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Severity__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Severity__c</fullName>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <label>1 - Critical</label>
            </value>
            <value>
                <fullName>Major</fullName>
                <label>2 - Major</label>
            </value>
            <value>
                <fullName>Minor</fullName>
                <label>3 - Minor</label>
            </value>
            <value>
                <fullName>Cosmetic</fullName>
                <label>4 - Cosmetic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>