Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Step_Number__c</fullName>
    <label>Step Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>