Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Summary__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Summary__c</fullName>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>