Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/fields/SVMX_PS_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
                <default>true</default>
                <label>Issue</label>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>