Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/listViews/All_unresolved.listView-meta.xml
<ListView>
    <fullName>All_unresolved</fullName>
    <columns>NAME</columns>
    <columns>SVMX_PS_Script_Number__c</columns>
    <columns>SVMX_PS_Step_Number__c</columns>
    <columns>SVMX_PS_Resolved__c</columns>
    <columns>SVMX_PS_Severity__c</columns>
    <columns>SVMX_PS_Status__c</columns>
    <columns>SVMX_PS_JIRA_ID__c</columns>
    <columns>SVMX_PS_Actor__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>SVMX_PS_Device__c</columns>
    <columns>SVMX_PS_Summary__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SVMX_PS_Resolved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>SVMX_PS_Status__c</field>
        <operation>equals</operation>
        <value>JIRA</value>
    </filters>
    <label>All unresolved</label>
    <language>en_US</language>
</ListView>