Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Issue__c/listViews/Service_Cloud.listView-meta.xml
<ListView>
    <fullName>Service_Cloud</fullName>
    <columns>NAME</columns>
    <columns>SVMX_PS_Resolved__c</columns>
    <columns>SVMX_PS_Summary__c</columns>
    <columns>SVMX_PS_Priority__c</columns>
    <columns>SVMX_PS_Actor__c</columns>
    <columns>SVMX_PS_Detail__c</columns>
    <columns>SVMX_PS_Status__c</columns>
    <columns>SVMX_PS_Severity__c</columns>
    <columns>SVMX_PS_Step_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SVMX_PS_Status__c</field>
        <operation>equals</operation>
        <value>Service Cloud</value>
    </filters>
    <label>Service Cloud</label>
    <language>en_US</language>
</ListView>